// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots SearchInput Default 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ECEFF1",
      "borderRadius": 24,
      "flex": 1,
      "flexDirection": "row",
      "height": 40,
      "paddingHorizontal": 16,
      "paddingVertical": 8,
      "width": "100%",
    }
  }
>
  <View>
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={16}
      bbWidth={16}
      color={4287669422}
      focusable={false}
      height={16}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 16,
            "width": 16,
          },
        ]
      }
      tintColor={4287669422}
      vbHeight={13}
      vbWidth={13}
      width={16}
    >
      <RNSVGGroup>
        <RNSVGPath
          d="M12.414 11L9.167 7.753C9.691 6.963 10 6.018 10 5c0-2.757-2.243-5-5-5S0 2.243 0 5s2.243 5 5 5a4.964 4.964 0 002.753-.833L11 12.414 12.414 11zM2 5c0-1.654 1.346-3 3-3s3 1.346 3 3-1.346 3-3 3-3-1.346-3-3z"
          fill={4287669422}
          fillRule={1}
          propList={
            Array [
              "fill",
              "fillRule",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    style={
      Object {
        "height": 8,
        "width": 8,
      }
    }
  />
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    onChangeText={[Function]}
    placeholder="Search"
    placeholderTextColor="#90A4AE"
    rejectResponderTermination={true}
    style={
      Object {
        "color": "#14171A",
        "flex": 1,
        "fontSize": 17,
      }
    }
    testID="search-input-field"
    underlineColorAndroid="transparent"
  />
</View>
`;

exports[`Storyshots SearchInput Fetching 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ECEFF1",
      "borderRadius": 24,
      "flex": 1,
      "flexDirection": "row",
      "height": 40,
      "paddingHorizontal": 16,
      "paddingVertical": 8,
      "width": "100%",
    }
  }
>
  <View>
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={16}
      bbWidth={16}
      color={4287669422}
      focusable={false}
      height={16}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 16,
            "width": 16,
          },
        ]
      }
      tintColor={4287669422}
      vbHeight={13}
      vbWidth={13}
      width={16}
    >
      <RNSVGGroup>
        <RNSVGPath
          d="M12.414 11L9.167 7.753C9.691 6.963 10 6.018 10 5c0-2.757-2.243-5-5-5S0 2.243 0 5s2.243 5 5 5a4.964 4.964 0 002.753-.833L11 12.414 12.414 11zM2 5c0-1.654 1.346-3 3-3s3 1.346 3 3-1.346 3-3 3-3-1.346-3-3z"
          fill={4287669422}
          fillRule={1}
          propList={
            Array [
              "fill",
              "fillRule",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    style={
      Object {
        "height": 8,
        "width": 8,
      }
    }
  />
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    onChangeText={[Function]}
    placeholder="Search"
    placeholderTextColor="#90A4AE"
    rejectResponderTermination={true}
    style={
      Object {
        "color": "#14171A",
        "flex": 1,
        "fontSize": 17,
      }
    }
    testID="search-input-field"
    underlineColorAndroid="transparent"
    value="Foo"
  />
  <View
    style={
      Object {
        "height": 8,
        "width": 8,
      }
    }
  />
  <ActivityIndicator
    animating={true}
    color="#14171A"
    hidesWhenStopped={true}
    size="small"
  />
</View>
`;

exports[`Storyshots SearchInput With text 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ECEFF1",
      "borderRadius": 24,
      "flex": 1,
      "flexDirection": "row",
      "height": 40,
      "paddingHorizontal": 16,
      "paddingVertical": 8,
      "width": "100%",
    }
  }
>
  <View>
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={16}
      bbWidth={16}
      color={4287669422}
      focusable={false}
      height={16}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 16,
            "width": 16,
          },
        ]
      }
      tintColor={4287669422}
      vbHeight={13}
      vbWidth={13}
      width={16}
    >
      <RNSVGGroup>
        <RNSVGPath
          d="M12.414 11L9.167 7.753C9.691 6.963 10 6.018 10 5c0-2.757-2.243-5-5-5S0 2.243 0 5s2.243 5 5 5a4.964 4.964 0 002.753-.833L11 12.414 12.414 11zM2 5c0-1.654 1.346-3 3-3s3 1.346 3 3-1.346 3-3 3-3-1.346-3-3z"
          fill={4287669422}
          fillRule={1}
          propList={
            Array [
              "fill",
              "fillRule",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    style={
      Object {
        "height": 8,
        "width": 8,
      }
    }
  />
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    onChangeText={[Function]}
    placeholder="Search"
    placeholderTextColor="#90A4AE"
    rejectResponderTermination={true}
    style={
      Object {
        "color": "#14171A",
        "flex": 1,
        "fontSize": 17,
      }
    }
    testID="search-input-field"
    underlineColorAndroid="transparent"
    value="Foo"
  />
  <View
    style={
      Object {
        "height": 8,
        "width": 8,
      }
    }
  />
  <View
    accessible={true}
    focusable={true}
    hitSlop={
      Object {
        "bottom": 16,
        "left": 16,
        "right": 16,
        "top": 16,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="search-input-clear"
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={14}
      bbWidth={14}
      color={4283723386}
      focusable={false}
      height={14}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 14,
            "width": 14,
          },
        ]
      }
      tintColor={4283723386}
      vbHeight={24}
      vbWidth={24}
      width={14}
    >
      <RNSVGGroup>
        <RNSVGPath
          d="M0 0h24v24H0z"
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        />
        <RNSVGPath
          d="M21.456 5.414l-2.829-2.828-6.585 6.586-6.586-6.586-2.829 2.828L9.213 12l-6.586 6.586 2.829 2.828 6.586-6.586 6.585 6.586 2.829-2.828L14.87 12z"
          fill={4283723386}
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;
